manifests/home-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-app-svc
  namespace: home-app
  labels:
    run: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx
