manifests/home-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: home-app
spec:
  rules:
  - host: "deployonfridayis.fun"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-app-svc
            port:
              number: 80
